@@ -1,4 +1,4 @@
-Copyright (C)  2006, 2007, 2009, 2015, 2016, 2017 Heiko Stamer <HeikoStamer@gmx.net>
+Copyright (C)  2006--2009, 2015--2018 Heiko Stamer <HeikoStamer@gmx.net>
 
 Permission is granted to copy, distribute and/or modify this document under
 the terms of the GNU Free Documentation License, Version 1.3 or any later
@@ -7,7 +7,8 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
-* [2018-01-10] RFC4480: added RSA encoding for PacketPubEncode()
+* [2018-01-12] RFC4880: added PacketSigPrepareCertificationSignature()
+* [2018-01-10] RFC4880: added RSA encoding for PacketPubEncode()
 * [2018-01-09] RFC4880: added AsymmetricSignRSA() and AsymmetricVerifyRSA()
 * [2017-12-23] release 1.3.9 of LibTMCG
 * [2017-12-19] RFC4880: fixes bad interpretation of subpacket length encoding
